--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # Ignore bundler config.
 /.bundle
 .idea
+config/database.yml
+public/assets
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
